--- a/doc/specs/list.tex
+++ b/doc/specs/list.tex
@@ -307,7 +307,7 @@ second index excluded. An error if out of bounds (\autoref{lst:list-range}).
 [0, 1, 2, 3].range(1, 3);
 [00000000] [1, 2]
 [].range(1, 3);
-[00428697:error] !!! []: invalid index: 1
+[00428697:error] !!! urbi/list.u: []: invalid index: 1
 \end{urbiscript}
 
 
