Check consistency bw C++ and Urbi revisions.
	* share/urbi/local.mk (package-info.u): New.
	* include/kernel/userver.hh (xload_init_file, revision_check): New.
	* src/kernel/userver.cc (init_error): New.
	Use it.
	(initialize): Use revision_check and xload_init_file.
	* doc/RELEASE-NOTES.txt: Doc it.

--- a/doc/RELEASE-NOTES.txt
+++ b/doc/RELEASE-NOTES.txt
@@ -25,6 +25,14 @@ The native "long unsigned int" type is now used for all the bitwise
 operations (&, |, ^, compl, <<, >>).  As a consequence it is now an
 error to pass negative operands to these operations.
 
+System.PackageInfo
+------------------
+
+This new object provides version information about the Urbi package.
+It is also used to ensure that the initialization process uses
+matching Urbi and C++ files.  This should prevent accidental
+mismatches due to incomplete installation processes.
+
 Precedence of operator **
 -------------------------
 
