--- a/doc/tutorial/urbi-tutorial.tex
+++ b/doc/tutorial/urbi-tutorial.tex
@@ -17,7 +17,7 @@
 \chapter{Introduction}
 
 Urbi is a programming language primarily designed for robotics. It's a
-dynamic, prototype-based, object oriented scripting language. It
+dynamic, prototype-based, object-oriented scripting language. It
 supports and emphasizes parallel and event-based programming, which
 are very popular paradigms in robotics, by providing core primitives
 and language constructs.
